Attempting to fix text wrapping bug on android for the click to call widget

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -432,7 +432,7 @@ button,
 }
 
 .phone-number-link {
-	text-rendering: auto;
+	text-rendering: initial;
 }
 
 
